--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,12 @@
+.montserrat-normal {
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
 body {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: "Montserrat", sans-serif;
     background-color:rgb(250, 250, 255);
 }
 
@@ -10,7 +17,7 @@ body {
 
 .topnav {
     border: 2px solid #aaaaaa;
-    border-radius: 10px;
+    border-radius: 15px;
     overflow: hidden;
     box-shadow: 5px 5px 5px rgb(121, 121, 121);
 }
@@ -22,10 +29,11 @@ body {
     padding: 14px 14px;
     text-decoration: none;
     font-size: 17px;
+    border-radius: 15px;
 }
 
 .topnav a:hover {
-    background-color: #aaaaaa;
+    background-color: rgb(213, 230, 236);
 }
 
 .topnav a.active {
@@ -33,9 +41,8 @@ body {
 }
 
 .primera-linea {
-    float: left;
-    margin-left: 25%;
-    width: 75%;
+    display: flex;
+    justify-content: center;
 }
 
 .fotocv {
@@ -46,13 +53,14 @@ body {
 }
 
 .div_datos {
-    float: left;
+    float: right;
     border: 2px solid #aaaaaa;
     text-align: center;
     border-radius: 10px;
     margin-left: 60px;
     margin-top: 100px;
     box-shadow: 5px 5px 5px rgb(121, 121, 121);
+    height: fit-content;
     transition: all ease 0.5s;
 }
 
@@ -70,47 +78,37 @@ body {
 }
 
 .segunda-linea {
-    float: left;
-    margin-left: 23%;
-    margin-top: 20px;
-    width: 77%;
+    display: flex;
+    justify-content: center;
+    margin-top: 2%;
 }
 
-.columna_izq {
-    float: left;
-    overflow: hidden;
+.div_contacto {
+    display: inline-block;
     border: 2px solid #aaaaaa;
     border-radius: 10px;
-    margin-top: 30px;
-    padding-top: 16px;
-    padding-bottom: 34px;
-    width: 32%;
     box-shadow: 5px 5px 5px rgb(121, 121, 121);
     transition: all ease 0.5s;
 }
 
-.columna_izq a{
+.div_contacto a{
     text-decoration: none;
     color: black;
 }
 
-.columna_izq i {
+.div_contacto i {
     margin-left: 5px;
 }
 
-.columna_izq:hover {
+.div_contacto:hover {
     transform: scale(120%);
 }
 
 .columna_der {
-    float: left;
     overflow: hidden;
     border: 2px solid #aaaaaa;
     border-radius: 10px;
-    margin-top: 30px;
-    margin-left: 49px;
-    padding-left: 10px;
-    width: 30%;
+    margin-left: 10%;
     box-shadow: 5px 5px 5px rgb(121, 121, 121);
     transition: all ease 0.5s;
 }
@@ -130,6 +128,7 @@ footer {
 footer a {
     text-decoration: none;
     color: black;
+    background-color: rgb(250, 250, 255);
     border: 2px solid #aaaaaa;
     border-radius: 10px;
     box-shadow: 5px 5px 5px rgb(121, 121, 121);
@@ -142,17 +141,20 @@ footer:hover {
 
 .experiencia {
     margin-top: 5%;
-    margin-left: 28%;
+    display: flex;
+    justify-content: center;
 }
 
 .formacion {
     margin-top: 5%;
-    margin-left: 29.7%;
+    display: flex;
+    justify-content: center;
 }
 
 .complementaria {
     margin-top: 5%;
-    margin-left: 27%;
+    display: flex;
+    justify-content: center;
 }
 
 table, th, td, tr {
@@ -237,21 +239,4 @@ td {
 .perfil_profesional p {
     margin-left: 15%;
     margin-right: 15%;
-}
-
-.chip {
-    margin: auto;
-    margin-top: 10%;
-    width: 50%;
-}
-
-.chip p {
-    list-style-type: none;
-    border: 2px solid #aaaaaa;
-    border-radius: 25px;
-    padding: 10px;
-    padding-left: 15px;
-    padding-right: 15px;
-    text-align: center;
-    margin-top: 5%;
 }
