--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,3 @@
-.montserrat-normal {
-  font-family: "Montserrat", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
-}
-
 body {
     font-family: "Montserrat", sans-serif;
     background-color:rgb(250, 250, 255);
@@ -80,13 +73,15 @@ body {
 .segunda-linea {
     display: flex;
     justify-content: center;
-    margin-top: 2%;
+    margin-top: 4%;
 }
 
 .div_contacto {
     display: inline-block;
     border: 2px solid #aaaaaa;
     border-radius: 10px;
+    padding-left: 1%;
+    padding-right: 1%;
     box-shadow: 5px 5px 5px rgb(121, 121, 121);
     transition: all ease 0.5s;
 }
@@ -105,10 +100,11 @@ body {
 }
 
 .columna_der {
-    overflow: hidden;
     border: 2px solid #aaaaaa;
     border-radius: 10px;
     margin-left: 10%;
+    padding-left: 1%;
+    padding-right: 1%;
     box-shadow: 5px 5px 5px rgb(121, 121, 121);
     transition: all ease 0.5s;
 }
@@ -174,6 +170,11 @@ td {
     
 }
 
+.experiencia a, .formacion a, .complementaria a {
+    text-decoration: none;
+    color: rgb(250, 250, 255);
+}
+
 .first-line th:first-of-type {
     border-top-left-radius: 10px;
 }
@@ -193,8 +194,10 @@ td {
 
 .descripcion_exp {
     margin-top: 40px;
-    margin-left: 25%;
-    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
     padding: 20px;
     border: 2px solid #aaaaaa;
     border-radius: 20px;
@@ -235,8 +238,4 @@ td {
     margin: auto;
     margin-top: 3%;
     padding: 10px;
-}
-.perfil_profesional p {
-    margin-left: 15%;
-    margin-right: 15%;
 }
